# corybuecker

./: .dockerignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .rubocop_todo.yml  Caddyfile  Cargo.toml  Dockerfile  Gemfile  Rakefile  build.sh  cloudbuild.yaml  docker-compose.yml  fly.toml  mix.exs  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
assets/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
content/: 001-an-introduction.md  002-how-to-make-a-static-blog-in-markdown-and-nextjs.md  003-how-to-run-a-static-site-in-google-cloud-run.md  004-automating-cloud-run-deploy-from-github-actions-part-one.md  005-automating-cloud-run-deploy-from-github-actions-part-two.md  006-capturing-simple-analytics-without-GA.md  007-aggregating-blog-analytics-with-exlytics.md  008-compiling-gnupg-on-apple-silicon-big-sur.md  009-configuring-kubernetes-and-nginx-ingress-for-a-mail-server.md  010-setting-up-nfs-on-kubernetes.md  011-setting-up-dovecot-for-imap-and-email-submission-on-kubernetes.md  012-kubernetes-mail-server-tying-it-all-together.md  013-adding-tailwindcss-postcss-optional-plugins-to-a-new-phoenix-application copy.md  013-adding-tailwindcss-postcss-optional-plugins-to-a-new-phoenix-application.md  013-bootstrapping-phoenix-app-with-tailwind-and-postcss.md  014-fine-tuning-creality-ender-3-s1-pro-3d-printer-with-klipper.md
lib/: blog.ex  post.ex  posts.rb  sitemap.ex
src/: admin.rs  index.js  index.ts  main.rs  schema.rs
(+81 files in other folders)
