[package]
name = "corybuecker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.23.0"
openidconnect = { version = "3.5.0", features = ["reqwest"] }
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_db_pools = { version = "0.1.0", features = ["deadpool_postgres"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = "1.0.201"
log = "0.4.21"